# OpenStack-demo

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg
openstack_demo.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
openstack_demo/api/: app.py  config.py  expose.py
openstack_demo/api/controllers/: root.py
openstack_demo/api/controllers/v1/: controller.py
openstack_demo/cmd/: api.py
